--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
     ## Your website name goes here.
-    server_name domainname.com www.domainname.com;
+    server_name domainname.com;
     ## Your only path reference.
     root /var/www/;
     listen 80;
